 2011-10-05 10:00  alexpeshkoff 
   M src/gpre/gpre.cpp
   M src/isql/isql.epp
   M src/qli/lex.cpp
Backported posix-only fix for CORE-3600: temp files fb_query_xxxx remains after ISQL has been closed

 2011-10-04 13:19  alexpeshkoff 
   M src/alice/alice.cpp
   M src/alice/alice_meta.epp
   M src/alice/alice_proto.h
   M src/alice/exe.cpp
   M src/alice/tdr.cpp
   M src/common/StatusArg.cpp
   M src/common/StatusArg.h
   M src/jrd/svc.cpp
Backported fix for CORE-3612: gfix-related services may loose error value in status vector in isc_service_start()

 2011-10-03 14:54  paul_reeves 
   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
   M builds/install/arch-specific/win32/es/leame_instalacion.txt
Sync B2_5_Release branch with changes made to R2_5_1

 2011-09-29 08:01  hvlad 
   M src/jrd/vio.cpp
misc

 2011-09-29 07:45  hvlad 
   M src/jrd/vio.cpp
Fixed bug CORE-3610 : Can insert DUPLICATE keys in UNIQUE index

 2011-09-28 10:23  dimitr 
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
   M builds/install/arch-specific/win32/ru/installation_readme.txt
Russian translation adjustments.

 2011-09-28 10:05  paul_reeves 
   M builds/install/arch-specific/win32/cz/custom_messages_cz.inc
use correct language marker for new entries

 2011-09-28 09:58  paul_reeves 
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
Use proper english for place holder text.

 2011-09-28 09:49  paul_reeves 
   M builds/install/arch-specific/win32/ru/Readme.txt
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
   M builds/install/arch-specific/win32/ru/installation_readme.txt
Sync B2_5_Release branch with changes made to R2_5_1

 2011-09-28 09:17  paul_reeves 
   M builds/install/arch-specific/win32/pt/custom_messages_pt.inc
   M builds/install/arch-specific/win32/pt/instalacao_leia-me.txt
   M builds/install/arch-specific/win32/pt/leia-me.txt